--- a/3- Aplicações web/2 - DOM/1 - Acessando o Dom/aula 02/index.html
+++ b/3- Aplicações web/2 - DOM/1 - Acessando o Dom/aula 02/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1- getElementById</title>
+    <title>2- getElementsTagName</title>
 </head>
 <body>
     <div id="c1" class="curso">HTML</div>
@@ -12,6 +12,6 @@
     <div id="c4" class="curso">PHP</div>
     <div id="c5" class="curso">React</div>
     <div id="c6" class="curso">MySQL</div>
-    <script src="aula01.js"></script>
+    <script src="aula02.js"></script>
 </body>
 </html>
