--- a/3- Aplicações web/2 - DOM/5 - filter/index.html
+++ b/3- Aplicações web/2 - DOM/5 - filter/index.html
@@ -18,27 +18,27 @@
         <section id="caixa02" class="caixa">
             <div id="c1" class="curso c1">
                 <label for="curso">HTML</label>
-                <input type="radio" name="curso" id="html" required>
+                <input type="radio" name="curso" id="HTML" required>
             </div>
             <div id="c2" class="curso c1">
                 <label for="curso">CSS</label>
-                <input type="radio" name="curso" id="css" required>
+                <input type="radio" name="curso" id="CSS" required>
             </div>
             <div id="c3" class="curso c1">
-                <label for="curso">JavaScript</label>
-                <input type="radio" name="curso" id="javascript" required>
+                <label for="curso">JAVASCRIPT</label>
+                <input type="radio" name="curso" id="JAVASCRIPT" required>
             </div>
             <div id="c4" class="curso c1">
-                <label for="curso">React</label>
-                <input type="radio" name="curso" id="react" required>
+                <label for="curso">REACT</label>
+                <input type="radio" name="curso" id="REACT" required>
             </div>
             <div id="c5" class="curso c1">
-                <label for="php">PHP</label>
-                <input type="radio" name="curso" id="php" required>
+                <label for="curso">PHP</label>
+                <input type="radio" name="curso" id="PHP" required>
             </div>
             <div id="c6" class="curso c1">
-                <label for="mysql">MySQL</label>
-                <input type="radio" name="curso" id="mysql" required>
+                <label for="curso">MYSQL</label>
+                <input type="radio" name="curso" id="MYSQL" required>
             </div>
         </section>
         <script src="javascript.js"></script>
